--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.application.name=bni
 # spring.jpa.hibernate.ddl-auto=none
 # spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
 
-spring.datasource.url=jdbc:postgresql://postgres-db:5432/test_db
+spring.datasource.url=jdbc:postgresql://localhost:5432/test_dua_db
 spring.datasource.username=admin
 spring.datasource.password=admin123
 spring.datasource.driver-class-name=org.postgresql.Driver
