--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,6 @@ spring.jpa.show-sql=true
 
 management.endpoints.web.exposure.include=health,info,metrics
 management.endpoint.health.show-details=always
+
+file.upload-dir=uploads
+spring.servlet.multipart.enabled=true
