--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -2,14 +2,14 @@ name: Trigger OpenShift Build
 on:
   push:
     branches:
-      - main
+      - master
   workflow_dispatch:
 jobs:
   trigger-build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/chec
+        uses: actions/checkout@v3
 
       - name: Install OC CLI
         run: |
