--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,25 +1,28 @@
 name: Trigger OpenShift Build
+
 on:
   push:
     branches:
       - master
-  workflow_dispatch:
+
 jobs:
   trigger-build:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout code
+      - name: Checkout source code
         uses: actions/checkout@v3
 
       - name: Install OC CLI
         run: |
-          curl -LO https://mirror.openshift.com/pub/openshift-v4/clients/oc/latest/openshift-client-linux.tar.gz
-          tar -xvf openshift-client-linux.tar.gz
+          curl -LO https://mirror.openshift.com/pub/openshift-v4/clients/ocp/latest/openshift-client-linux.tar.gz
+          tar -xzf openshift-client-linux.tar.gz
           sudo mv oc kubectl /usr/local/bin/
-          oc version
+
       - name: Login to OpenShift
         run: |
           oc login --token=${{ secrets.OC_TOKEN }} --server=${{ secrets.OC_SERVER }}
-      - name: Start OpenShift Build
+
+      - name: Start OpenShift build
         run: |
-          oc start-build ${{ secrets.OC_BUILD_NAME}} -n ${{ secrets.OC_NAMESPACE }} --wait --follow
+          oc start-build ${{ secrets.OC_BUILD_NAME }} -n ${{ secrets.OC_NAMESPACE }} --wait --follow
