updated profiles feature crud]

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -5,6 +5,7 @@ on:
     branches:
       - master
 #this is automatically triggered
+#new commits
 jobs:
   trigger-build:
     runs-on: ubuntu-latest
